# dis

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REQUEST.md  docker-compose.yaml  skills-lock.json
.github/workflows/: cd.yaml  ci.yaml
backend/: .coverage  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/src/: db.py  main.py  mcp_server.py
backend/src/core/: config.py  dependencies.py  errors.py  security.py
backend/src/endpoints/: __init__.py  documents.py  tags.py
backend/src/models/: __init__.py  document.py
backend/src/repositories/: __init__.py  document_repo.py  in_memory.py  protocols.py
backend/src/schemas/: __init__.py
backend/src/services/: __init__.py  di.py  factory.py  ingestion.py  protocols.py  tags.py
backend/src/services/adapters/: fake_embedder.py  fastembed_sparse.py  markitdown_parser.py  openrouter_embedder.py  qdrant_vector_store.py  semchunk_chunker.py
backend/tests/: _failing_embedder.py  _fakes.py  smoke_ingestion_e2e.py  smoke_qdrant_live.py  test_document_model.py  test_endpoints.py  test_errors.py  test_health.py  test_in_memory_document_repo.py  test_in_memory_vector_store.py  test_ingestion_service.py  test_markitdown_parser.py  test_mcp_tools.py  test_openrouter_embedder.py  test_qdrant_vector_store.py  test_semchunk_chunker.py
backend/tests/e2e/: smoke_ingestion_e2e.py  smoke_qdrant_live.py  test_documents_api.py
backend/tests/integration/: test_endpoints.py  test_markitdown_parser.py  test_mcp_tools.py  test_openrouter_embedder.py  test_qdrant_vector_store.py
backend/tests/unit/: test_db.py  test_dependencies.py  test_di.py  test_factory.py  test_fastembed_sparse.py  test_in_memory_document_repo.py  test_in_memory_vector_store.py  test_ingestion_service.py  test_markitdown_parser_vlm.py  test_security.py  test_sql_document_repo.py
data/: mapping.yaml
data/final/: api-style-guide.txt  design-principles.docx  getting-started.md  incident-response.html
data/raw/: api-style-guide.md  architecture-overview.md  data-privacy.md  design-principles.md  engineering-handbook.md  expense-policy.md  incident-response.md
frontend/: AGENTS.md  Dockerfile  README.md  biome.json  index.html  nginx.conf  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  DocumentTable.tsx  StatusBadge.tsx  TagInput.tsx  UploadModal.tsx  api.ts  index.css  types.ts  useDocuments.ts
scripts/: convert_data.sh  ingest_data.sh  run_e2e.sh
sdd/specs/: api.md  documents.md  frontend.md  ingestion.md  mcp.md  (+3 more)
(+36 files in other folders)
