[project]
name = "dis-backend"
version = "0.1.0"
description = "Document Intelligence Server — REST API, ingestion pipeline, and MCP server."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "pydantic-settings",
    "asyncpg",
    "qdrant-client",
    "fastmcp",
    "openai",
    "markitdown[pdf,docx,pptx,xlsx]",
    "markitdown-ocr",
    "semchunk",
    "fastembed",
    "tiktoken",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
    "httpx2>=2.5.0",
    "coverage[toml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "integration: tests that exercise real adapters (need config/env)",
    "e2e: tests that require a running compose stack",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "PT", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
source = ["src/"]
omit = ["src/main.py", "**/__init__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ty]
